# localemu

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.s3  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  plux.ini  pyproject.toml
docs/: CONTRIBUTING.md  GETTING_STARTED.md
docs/development-environment-setup/: README.md
docs/end_user_license_agreement/: README.md
docs/localemu-concepts/: README.md
docs/testing/: README.md
docs/testing/integration-tests/: README.md
docs/testing/multi-account-region-testing/: README.md
docs/testing/parity-testing/: README.md
docs/testing/terraform-tests/: README.md
docs/testing/test-types/: README.md
scripts/: capture_notimplemented_responses.py  gen_env_vars.py  generate_coverage.py  generate_minimal_boto3stubs_install.py  render_marker_report.py  update_cfn_resources.py
scripts/tinybird/: retrieve_legacy_data_from_circleci.py  upload_raw_test_metrics_and_coverage.py
src/: mypy.ini
src/localemu/: config.py  constants.py  deprecations.py  openapi.yaml  plugins.py  version.py
src/localemu/aws/: accounts.py  app.py  client.py  components.py  connect.py  forwarder.py  mocking.py  patches.py  scaffold.py  skeleton.py  spec.py
src/localemu/cli/: awsemu.py  lpm.py  main.py  vpc_ip.py
src/localemu/dashboard/: actions.py  api.py  bus.py  plugins.py  registry.py  sse.py
src/localemu/export/: __init__.py  cli.py  http_api.py  ir.py  orchestrator.py  plugins.py  redaction.py  references.py
src/localemu/extensions/: __init__.py
src/localemu/http/: dispatcher.py  duplex_socket.py  hypercorn.py  response.py  trace.py
src/localemu/logging/: format.py  setup.py
src/localemu/runtime/: components.py  current.py  exceptions.py  hooks.py  init.py  main.py  patches.py  runtime.py  shutdown.py
src/localemu/services/: dockermixin.py  edge.py  internal.py  moto.py  plugins.py  providers.py  stores.py  stub_providers.py
src/localemu/state/: codecs.py  core.py  inspect.py  persistence.py  pickle.py  registry.py  snapshot.py
src/localemu/testing/: config.py
src/localemu/utils/: archives.py  async_utils.py  asyncio.py  bootstrap.py  checksum.py  collections.py  common.py  config_listener.py  container_networking.py  crypto.py  diagnose.py  docker_utils.py  event_matcher.py  files.py  http.py  id_generator.py  iputils.py  json.py  net.py  objects.py  openapi.py  patch.py  platform.py  run.py  serving.py  ssl.py  strings.py  sync.py  tagging.py  testutil.py  threads.py  urls.py
tests/: conftest.py
tests/aws/: conftest.py  test_error_injection.py  test_integration.py  test_moto.py  test_multi_accounts.py  test_multiregion.py  test_network_configuration.py  test_notifications.py  test_serverless.py  test_validate.py
tests/aws/serverless/: package.json  serverless.yml
tests/aws/templates/: apigw-awsintegration-request-parameters.yaml  cfn_ref_unsupported.yml  route53_healthcheck.yml  secretsmanager_secret.yml  vpc_gateway_attachment.yml
tests/bootstrap/: conftest.py  test_container_configurators.py  test_container_listen_configuration.py  test_cosmetic_configuration.py  test_init.py  test_localemu_container_server.py  test_service_loading.py
tests/bootstrap/resources/: event_handler.py
tests/e2e/: conftest.py  test_cognito_auth_e2e.py  test_cognito_oauth2_e2e.py  test_cognito_triggers_e2e.py  test_e2e_integrations.py  test_ec2_iam_lambda_integrations.py  test_iam_enforcement_internal_calls.py  test_s3_iam_enforcement_e2e.py  test_s3_select_e2e.py  test_services_e2e.py  test_sqs_sns_iam_enforcement_e2e.py
tests/e2e/broad/: test_all_ops_probe_live.py  test_all_services_smoke_live.py  test_broad_smoke_live.py  test_deep_edge_live.py  test_op_by_op_probe_live.py
tests/e2e/docker_emulation/: run_e2e.py  test_asg_lifecycle.py  test_aurora_cluster.py  test_aurora_failover.py  test_ecs.py  test_ecs_task_credentials.py  test_eip_data_plane.py  test_eip_lifecycle.py  test_eks.py  test_eni_hot_attach.py  test_eni_lifecycle.py  test_flow_log_nflog_e2e.py  test_iam_instance_profile.py  test_igw_attach_detach.py  test_lambda_container_image.py  test_multi_account_region.py  test_nacl_stateless.py  test_non_base_amis.py  test_opensearch.py  test_peering_lifecycle.py  test_peering_routing.py  test_peering_validation.py  test_persistence_cycle.py  test_rds.py  test_rds_read_replica.py  test_rds_snapshot_restore.py  test_reboot_instances.py  test_sg_cross_reference.py  test_ssm.py  test_tgw_dataplane.py  test_tgw_lifecycle.py  test_tgw_routes.py  test_vpc_endpoints.py
tests/e2e/service_backends/: README.md  test_kafka_msk_live.py  test_kafka_sweep_live.py  test_mq_rabbitmq_live.py  test_mq_sweep_live.py  test_pipes_dispatch_live.py  test_pipes_sweep_live.py  test_scheduler_dispatch_live.py  test_scheduler_sweep_live.py  test_sesv2_mailbox_live.py  test_sesv2_sweep_live.py
tests/integration/: conftest.py  test_config_endpoint.py  test_config_service.py  test_forwarder.py  test_security.py  test_stores.py
tests/integration/aws/: test_app.py
tests/integration/docker_utils/: conftest.py  test_docker.py
tests/integration/export_realaws/: conftest.py  test_s3_roundtrip.py
tests/integration/services/: test_internal.py
tests/integration/utils/: test_diagnose.py
tests/performance/: test_sqs_performance.py
tests/unit/: conftest.py  test_checksum.py  test_common.py  test_cors.py  test_docker_utils.py  test_dockerclient.py  test_edge.py  test_iputils.py  test_misc.py  test_moto.py  test_stores.py  test_tagging.py  test_templating.py
tests/unit/aws/: test_chain.py  test_client.py  test_connect.py  test_gateway.py  test_mocking.py  test_scaffold.py  test_service_router.py  test_skeleton.py  test_spec.py
tests/unit/cli/: test_awsemu_credentials.py  test_awsemu_ssm_start_session.py  test_lpm.py  test_stop_patterns.py  test_vpc_ip_debug.py
tests/unit/dashboard/: test_bus.py  test_cloudtrail_api_total_count.py  test_drill_key_of.py  test_resource_counters.py
tests/unit/export/: conftest.py  test_cli.py  test_collectors.py  (+10 more)
(+1653 files in other folders)
